# ct-dino

./: .gitmodules  README.md  pyproject.toml
convertation/: convert_pretrain_to_primus_m.py
