[project]
name = "ct-dino"
requires-python = ">=3.10"
version = "0.0.1"
description = "Training DINO on CT images"
authors = [
  {name = "Daniel Ignatyev", email = "dania.ignat@yandex.ru"},
]

dependencies = [
  "dinov2 @ git+https://github.com/xdoni4/dinov2@fb95208feec2365fc9be7184d49db952c6957824"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.build]
requires = ["torch==2.6.0"]
